--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <link rel="stylesheet" type="text/css" href="style.css">
+  <title>Document</title>
 </head>  
  <body></body> 
 </html>
